Fix spotify and show boxes on iPhone 5 screens

--- a/styles/main.css
+++ b/styles/main.css
@@ -251,7 +251,7 @@ div#js-navbar-collapse {
     position: absolute;
     width: 100%;
     height: 100%;
-    overflow-y: scroll;
+    overflow: scroll;
     padding: 10px;
 }
 
